--- a/src/utils/App.css
+++ b/src/utils/App.css
@@ -40,3 +40,34 @@
 .read-the-docs {
   color: #888;
 }
+
+header * {
+  display: inline;
+}
+
+nav {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  background-color: rgba(255, 0, 0, 0.527);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 80px;
+  display: inline-flex;
+  align-items: center;
+  color: black;
+}
+
+.Nav-link {
+color: black;
+}
+
+ul {
+  list-style: none;
+  display: inline-flex;
+}
+
+body {
+  margin-top: 50px;
+}
